[package]
name = "vamp"
version = "0.1.0"
authors = ["Jacob Hughes <exrook.j@gmail.com>"]

[dependencies]
portaudio = "0.7"
palette = "0.2"
vamp-host = { path = "../vamp-host" }
set_neopixels = { path = "../set_neopixels", features = ["serde"] }
multi_net = { git = "ssh://git@git.jacobhughes.me/exrook/multi_net.git" }
tokio-core = "0.1"
futures = "0.1"
serde = "1"
serde_derive = "1"
bincode = "0.8"
atomic_box = "^0.1.1"
rand = "0.3"
