[package]
name = "led_control"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]

[dependencies]
serial = "0.3"
clap = { version = "2.23", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[[bin]]
name = "set_leds"
required-features = ["clap"]
doc = false

[[bin]]
name = "stream_leds"
required-features = ["clap"]

[[bin]]
name = "test_bulk"
required-features = ["clap"]
doc = false
