[package]
name = "lednet"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]

[dependencies]
led_control = { path = "../led_control", features = ["serde"] }
multinet = { path = "../multinet" }
tokio-core = "0.1"
futures = "0.1"
serde = "1"
serde_derive = "1"
bincode = "0.8"
atomic_box = "^0.1.1"
error-chain = "0.11"
