[package]
name = "set_neopixels"
version = "0.1.0"
authors = ["Jacob Hughes <exrook.j@gmail.com>"]

[dependencies]
serial = "0.3"
clap = { version = "2.23", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[[bin]]
name = "set_neopixels"
required-features = ["clap"]
doc = false

[[bin]]
name = "stream_neopixels"
required-features = ["clap"]

[[bin]]
name = "test_bulk"
required-features = ["clap"]
doc = false
