[package]
name = "visualization"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]

[dependencies]
gfx = "0.16"
gfx_window_glutin = "0.16"
glutin = "0.8"
rand = "0.3"
image = "0.16"
led_control = {path = "../led_control", features = ["palette-traits"]}
palette = "0.2"
tokio-core = "0.1"
lednet = {path = "../lednet"}
error-chain = "0.11"
crossbeam = "0.3"
nalgebra = "0.13"
